# governance-layer

./: .env.example  .gitignore  AGENTS.md  README.md  prove.ipynb  pyproject.toml
book/: 00-preface.md
book/appendix-a/: tee-isolation.md
book/chapter-01/: 01-why-ai-needs-a-governance-layer.md
book/chapter-02/: 02-neural-parliament.md
book/chapter-03/: 03-ulysses-contracts.md
book/chapter-04/: 04-identity-layer.md
book/responses/: response-to-review-panel.md
references/: README.md  bibliography.md
results/: prove_results.json
src/governance/: models.py  runner.py  speaker.py
src/governance/benchmarks/: baselines.py  report.py  run_all.py
src/governance/committee/: __init__.py  base.py  members.py
src/governance/contracts/: contract.py  enforcement.py  merger.py
src/governance/dashboard/: app.py  benchmarks_tab.py  model_tab.py  parliament_tab.py
src/governance/experiments/: base.py  deadlock_maze.py  drift_lab.py  grid_world.py  gym_env.py  metrics.py  rl_adversary.py  rl_train.py  temptation_bank.py
src/governance/identity/: core.py  extension.py  keys.py  ontology.py  params.py  tiers.py
src/governance/ontology/: backend.py  memory_backend.py  neo4j_backend.py
src/governance/prove/: __init__.py  predictions.py  runner.py
src/governance/tee/: batch.py  constant_time.py  enclave.py  watchdog.py
