[project]
name = "governance-layer"
version = "0.1.0"
description = "The Governance Layer: A Formal Framework for Self-Governing AI"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "neo4j>=5.20",
    "streamlit>=1.35",
    "altair>=5.4",
    "pytest>=8.0",
    "pandas>=2.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
rl = [
    "torch>=2.0",
    "stable-baselines3>=2.3",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
